--- a/--- Projects/Mini App - "Chop Chop"/css/styles.css
+++ b/--- Projects/Mini App - "Chop Chop"/css/styles.css
@@ -4,14 +4,26 @@
 
 body {
   font-family:'Courier New', Courier, monospace;
-  background: #1f1f1f;
+  background: #383838;
   color: #d8d6d6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
 
 img {
   max-width: 300px;
   border-radius: 16px;
   border:#d8d6d6 2px solid;
+}
+
+.container1, .container2 {
+  background: #313131;
+  width: 75%;
+  margin: auto;
+  padding: 25px;
+  border-radius: 10px;
 }
 
 .container1 {
@@ -26,7 +38,6 @@ img {
   flex-direction: row;
   justify-content: center;
   align-items:flex-start;
-  margin: 32px 0px 32px 0px;
   gap: 16px;
 }
 
