--- a/--- Projects/Static Page - Pizzeria Da Nono/css/styles.css
+++ b/--- Projects/Static Page - Pizzeria Da Nono/css/styles.css
@@ -114,3 +114,23 @@ h1,
   color: rgb(0, 0, 0);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2em 0;
+  background-color: #1b1b1b;
+  color: white;
+}
+
+.footer-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-icon {
+  width: 30px; /* Adjust size as needed */
+  margin-bottom: 10px;
+}
