--- a/--- Projects/Static Page - Pizzeria Da Nono/css/styles.css
+++ b/--- Projects/Static Page - Pizzeria Da Nono/css/styles.css
@@ -134,3 +134,8 @@ h1,
   width: 30px; /* Adjust size as needed */
   margin-bottom: 10px;
 }
+
+.footer a {
+  text-decoration: none;
+  color: white;
+}
