D018-EX1 Style display + start display hidden -- Change display style -- Issue: empty display box showing at start -- Fix: add hidden class, removed at click

--- a/20240603/afternoon_day_18_exercises/exercise 1/styles.css
+++ b/20240603/afternoon_day_18_exercises/exercise 1/styles.css
@@ -4,12 +4,21 @@ body {
   align-items: center;
 }
 
-#incrementButton {
+#increment-button {
   font-size: 56px;
   box-shadow: 5px 5px 5px #c5c5c5;
 }
 
-#updatedCountDisplay {
+.hidden {
+  visibility: hidden;
+}
+
+#count-container {
   font-family:'Courier New', Courier, monospace;
   font-size: 56px;
+  background: black;
+  color: #01bd1a;
+  padding: 5px;
+  border-radius: 5px;
+  border: #575757 3px solid;
 }
