Correct innerHTML in all files, Continue D018EX2

--- a/20240603/afternoon_day_18_exercises/exercise 2/styles.css
+++ b/20240603/afternoon_day_18_exercises/exercise 2/styles.css
@@ -2,5 +2,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  gap: 12px;
 }
 
+.validation-message-red {
+  background: green;
+}
+
+.validation-message-green {
+  background: red;
+}
