D018EX2 Finish exercise -- Feedback from Nikki: ---- Use <form> for form (applied directly)
-- Issue: by only adding classes in the loop, could cause
accumulation of classes and color not updating well (staying
red from failure to success scenario)
-- Fix: Clear all classes from element before starting loop

--- a/20240603/afternoon_day_18_exercises/exercise 2/styles.css
+++ b/20240603/afternoon_day_18_exercises/exercise 2/styles.css
@@ -2,14 +2,25 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   gap: 12px;
 }
 
-.validation-message-red {
-  background: green;
+.validation-message {
+  padding: 10px;
+  border: #a5a3a3 1px solid;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #777777;
 }
 
 .validation-message-green {
-  background: red;
+  background: rgba(0, 128, 0, 0.452);
+}
+
+.validation-message-red {
+  background: rgba(255, 0, 0, 0.281);
+}
+
+form * {
+  margin: 5px;
 }
