-PIZZ- Start contact form JS validation

--- a/_Projects/-PIZZ-/css/styles.css
+++ b/_Projects/-PIZZ-/css/styles.css
@@ -490,7 +490,18 @@ main {
 }
 
 @media screen and (max-width: 600px) {
-.top-container {
+.about-container {
   flex-direction: column;
 }
+}
+
+.contact-content {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 50%;
+}
+
+textarea {
+  resize: vertical;
 }
